# EffectiveAlgorithms

./: .gitignore  CMakeLists.txt  Makefile  README.md  presentation.html  presentation.md  project_plan.tex  report.md  results_table.html  stage1_report.tex
include/zkbfs/: bfs01.hpp  bfs0k.hpp  bfs0k_trace.hpp  common.hpp  dijkstra.hpp  generators.hpp  graph_csr.hpp  grid_graph.hpp  json_out.hpp
results/: anim_grid.json  anim_grid_dijkstra.json  cmp_bfs0k.json  cmp_dijkstra.json  trace_10x10.events.jsonl  trace_10x10.meta.json
results/logs/: sweep.jsonl
slides/: presentation_en.tex  presentation_ru.tex  script_en.tex  script_ru.tex
src/: main_bench.cpp  main_dump.cpp  main_trace.cpp
viz/: animate.py  animate_compare.py  animate_queues.py  plot_benchmarks.py  report_figs.py  run_pipeline.py  visualize_dump.py
